# CMakeList.txt: проект CMake для ascii-video; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("shreksophone")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (shreksophone "main.cpp")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
